# po

./: README.md
proj1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  obiektowe
proj1/src/: main.cpp
proj2/: CMakeCache.txt  Makefile  cmake_install.cmake  obiektowe
proj2/src/: main.cpp
proj3/: CMakeCache.txt  Makefile  cmake_install.cmake  obiektowe
proj3/src/: kalkulator.cpp  kalkulator.h  main.cpp
qtproj4/: CMakeLists.txt  README.md
qtproj4/.qt/: QtDeploySupport.cmake
qtproj4/src/: main.cpp  mainwindow.cpp  mainwindow.h
src/: main.cpp
